fix(): Spelling and spacing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -451,7 +451,7 @@ p+.button {
             height: 22px;
             display: block;
             position: absolute;
-            top: 6px;
+            top: 2px;
             left: 0;
         }
     }
